# FluidAudio

./: .env.example  .gitignore  AGENTS.md  Package.resolved  Package.swift  README.md  VIBEVOICE_CONVERSION_SUMMARY.md  openapi.yaml  run_benchmarks.py
.claude/: settings.json
.claude/hooks/: format-swift-file.sh
Documentation/: API.md  Benchmarks.md  CLI.md  ModelConversion.md  Models.md  README.md  Whisper.md
Documentation/ASR/: CustomPronunciation.md  GettingStarted.md  ServerGettingStarted.md  StreamingGettingStarted.md  VibeVoice.md  VibeVoiceTesting.md
Documentation/Android/: GettingStarted.md
Documentation/Diarization/: DiarizerTimeline.md  GettingStarted.md  LS-EEND.md  Sortformer.md
Documentation/TTS/: Kokoro.md  SSML.md
Scripts/: README.md  UV_ENVIRONMENT.md  check_coremltools_onnx.py  check_qwen3_config.py  convert_erax_whisper_to_coreml.py  convert_qwen3_asr_to_coreml.py  debug_decoder.py  extract_1_7b_extras.py  inspect_zipformer.py  upload_ctc_to_hf.sh  upload_erax_whisper.sh
Scripts/nemo_ami_benchmark/: README.md  nemo_ami_benchmark.py
Scripts/voice_cloning/: README.md
Sources/CSherpaOnnx/: shim.c
Sources/FluidAudio/: DownloadUtils.swift  FluidAudioSwift.swift  ModelCachePaths.swift  ModelNames.swift
Sources/FluidAudioCLI/: FluidAudioCLI.swift  README.md
Sources/FluidAudioServer/: main.swift
Tests/FluidAudioTests/: EraXWhisperIntegrationTests.swift  SerialWorkQueueTests.swift  (+4 more)
Tools/: convert_nemo_ctc_to_coreml.py  convert_qwen3_asr_to_coreml.py  convert_vibevoice_asr_to_coreml.py  eval_server_asr.py  extract_extras.py  inspect_whisper_models.py  pyproject.toml  quantize_vibevoice_int4.py  quantize_vibevoice_int4_v2.py  run_upload.sh  test_ctc_vietnamese.py  test_padding.py  upload_final.sh  upload_vibevoice.sh  upload_vibevoice_v2.sh
android/: .gitignore  gradlew  gradlew.bat  settings.gradle.kts
(+116 files in other folders)
